[gd_scene load_steps=3 format=3 uid="uid://d1qfn71lciogl"]

[ext_resource type="Script" path="res://World/world_map.gd" id="1_lrg7e"]
[ext_resource type="PackedScene" uid="uid://evaeyx7qw3t3" path="res://World/world_level.tscn" id="2_r0rki"]

[node name="WorldMap" type="Node2D"]
script = ExtResource("1_lrg7e")

[node name="CloudLevel" parent="." instance=ExtResource("2_r0rki")]
visible = false

[node name="TopLevel" parent="." instance=ExtResource("2_r0rki")]
visible = false

[node name="CommerceLevel" parent="." instance=ExtResource("2_r0rki")]
visible = false

[node name="BaseLevel" parent="." instance=ExtResource("2_r0rki")]

[node name="UpUndergroundLevel" parent="." instance=ExtResource("2_r0rki")]
visible = false

[node name="DeapUndergroundLvel" parent="." instance=ExtResource("2_r0rki")]
visible = false

[node name="UnderCitysLevel" parent="." instance=ExtResource("2_r0rki")]
visible = false

[connection signal="region_picked" from="CloudLevel" to="." method="_region_picked"]
[connection signal="registerTile" from="CloudLevel" to="." method="_registerTile"]
[connection signal="region_picked" from="TopLevel" to="." method="_region_picked"]
[connection signal="registerTile" from="TopLevel" to="." method="_registerTile"]
[connection signal="region_picked" from="CommerceLevel" to="." method="_region_picked"]
[connection signal="registerTile" from="CommerceLevel" to="." method="_registerTile"]
[connection signal="region_picked" from="BaseLevel" to="." method="_region_picked"]
[connection signal="registerTile" from="BaseLevel" to="." method="_registerTile"]
[connection signal="region_picked" from="UpUndergroundLevel" to="." method="_region_picked"]
[connection signal="registerTile" from="UpUndergroundLevel" to="." method="_registerTile"]
[connection signal="region_picked" from="DeapUndergroundLvel" to="." method="_region_picked"]
[connection signal="registerTile" from="DeapUndergroundLvel" to="." method="_registerTile"]
[connection signal="region_picked" from="UnderCitysLevel" to="." method="_region_picked"]
[connection signal="registerTile" from="UnderCitysLevel" to="." method="_registerTile"]
